<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/reStrartGame"
        android:icon="@drawable/restart"
        android:title="@string/menu_restartGame">
    </item>
    <item
        android:id="@+id/displayOriginalPic"
        android:icon="@drawable/vieworiginal"
        android:title="@string/menu_displayOriginalPic">
    </item>
    <item
        android:id="@+id/displayPuzzleView"
        android:icon="@drawable/vieworiginal"
        android:title="@string/menu_displayPuzzleView"
        android:visible="false">
    </item>
    <item
        android:id="@+id/displayBadge"
        android:icon="@drawable/showbadge"
        android:title="@string/menu_displayBadge">
    </item>
    <item
        android:id="@+id/hideBadge"
        android:icon="@drawable/showbadge"
        android:title="@string/menu_hideBadge"
        android:visible="false">
    </item>
   
    <item
        android:id="@+id/scaleScreen"
        android:icon="@drawable/scalescreen"
        android:title="@string/menu_scaleScreen"/>
    <item
        android:id="@+id/scaleFit"
        android:icon="@drawable/scalescreen"
        android:title="@string/menu_scaleFit"
        android:visible="false"/>
    <item
        android:id="@+id/changePic"
        android:icon="@drawable/changeimg"
        android:title="@string/menu_changePic"/>
    <item
        android:id="@+id/changeLevel"
        android:icon="@drawable/changelevel"
        android:title="@string/menu_changeLevel"/>

</menu>